Composable roles within services - MongoDB
Add MongoDB as a composable service.

Co-Authored-By: Juan Antonio Osorio Robles <jaosorior@redhat.com>
Change-Id: Idaa3275def3bcdb302a66fc1c88531ff718bcf67
Depends-On: Idb1e78ebec7682fe68ca5902a22cfb6030498091

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -30,3 +30,4 @@ resource_registry:
   OS::TripleO::Services::Memcached: ../puppet/services/pacemaker/memcached.yaml
   OS::TripleO::Services::Redis: ../puppet/services/pacemaker/database/redis.yaml
   OS::TripleO::Services::NovaConductor: ../puppet/services/pacemaker/nova-conductor.yaml
+  OS::TripleO::Services::MongoDb: ../puppet/services/pacemaker/database/mongodb.yaml
