--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -225,14 +225,6 @@ parameters:
     default: ''
     description: Comma-separated list of ntp servers
     type: comma_delimited_list
-  MongoDbNoJournal:
-    default: false
-    description: Should MongoDb journaling be disabled
-    type: boolean
-  MongoDbIPv6:
-    default: false
-    description: Enable IPv6 if MongoDB VIP is IPv6
-    type: boolean
   PublicVirtualFixedIPs:
     default: []
     description: >
@@ -597,6 +589,7 @@ parameters:
       - OS::TripleO::Services::SwiftProxy
       - OS::TripleO::Services::Redis
       - OS::TripleO::Services::NovaConductor
+      - OS::TripleO::Services::MongoDb
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
@@ -872,8 +865,6 @@ resources:
           NovaIPv6: {get_param: NovaIPv6}
           NovaPassword: {get_param: NovaPassword}
           NtpServer: {get_param: NtpServer}
-          MongoDbNoJournal: {get_param: MongoDbNoJournal}
-          MongoDbIPv6: {get_param: MongoDbIPv6}
           PcsdPassword: {get_resource: PcsdPassword}
           PublicVirtualInterface: {get_param: PublicVirtualInterface}
           RabbitPassword: {get_param: RabbitPassword}
