--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -147,6 +147,7 @@ resource_registry:
   OS::TripleO::Services::SaharaEngine: puppet/services/sahara-engine.yaml
   OS::TripleO::Services::Redis: puppet/services/database/redis.yaml
   OS::TripleO::Services::NovaConductor: puppet/services/nova-conductor.yaml
+  OS::TripleO::Services::MongoDb: puppet/services/database/mongodb.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
