composable neutron server
Adds new puppet and puppet pacemaker specific services for
the Neutron server configuration.

Depends-On: I52815f45a04bf3e39940b9cb116261730580a3e2

Partially-implements: blueprint composable-services-within-roles

Change-Id: I1680d4b7044f16d672e99ca356d954b6734af287

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -22,6 +22,7 @@ resource_registry:
   OS::TripleO::Services::NeutronDhcpAgent: ../puppet/services/pacemaker/neutron-dhcp.yaml
   OS::TripleO::Services::NeutronL3Agent: ../puppet/services/pacemaker/neutron-l3.yaml
   OS::TripleO::Services::NeutronMetadataAgent: ../puppet/services/pacemaker/neutron-metadata.yaml
+  OS::TripleO::Services::NeutronServer: ../puppet/services/pacemaker/neutron-server.yaml
   OS::TripleO::Services::RabbitMQ: ../puppet/services/pacemaker/rabbitmq.yaml
   OS::TripleO::Services::HAproxy: ../puppet/services/pacemaker/haproxy.yaml
   OS::TripleO::Services::Memcached: ../puppet/services/pacemaker/memcached.yaml
