--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -636,6 +636,7 @@ parameters:
       - OS::TripleO::Services::NeutronDhcpAgent
       - OS::TripleO::Services::NeutronL3Agent
       - OS::TripleO::Services::NeutronMetadataAgent
+      - OS::TripleO::Services::NeutronServer
       - OS::TripleO::Services::RabbitMQ
       - OS::TripleO::Services::HAproxy
       - OS::TripleO::Services::Keepalived
@@ -929,8 +930,6 @@ resources:
           NeutronMechanismDrivers: {get_param: NeutronMechanismDrivers}
           NeutronPluginExtensions: {get_param: NeutronPluginExtensions}
           NeutronAgentExtensions: {get_param: NeutronAgentExtensions}
-          NeutronAllowL3AgentFailover: {get_param: NeutronAllowL3AgentFailover}
-          NeutronL3HA: {get_param: NeutronL3HA}
           NeutronNetworkType: {get_param: NeutronNetworkType}
           NeutronTunnelTypes: {get_param: NeutronTunnelTypes}
           NovaIPv6: {get_param: NovaIPv6}
