add heat-api-cfn to endpoint map
Change-Id: I8f98ce92fc387d2263fda738c1c8a209e3cbbb85

--- a/environments/enable-tls.yaml
+++ b/environments/enable-tls.yaml
@@ -24,6 +24,9 @@ parameter_defaults:
     HeatAdmin: {protocol: 'http', port: '8004', host: 'IP_ADDRESS'}
     HeatInternal: {protocol: 'http', port: '8004', host: 'IP_ADDRESS'}
     HeatPublic: {protocol: 'https', port: '13004', host: 'CLOUDNAME'}
+    HeatCfnAdmin: {protocol: 'http', port: '8000', host: 'IP_ADDRESS'}
+    HeatCfnInternal: {protocol: 'http', port: '8000', host: 'IP_ADDRESS'}
+    HeatCfnPublic: {protocol: 'https', port: '13005', host: 'CLOUDNAME'}
     HorizonPublic: {protocol: 'https', port: '443', host: 'CLOUDNAME'}
     KeystoneAdmin: {protocol: 'http', port: '35357', host: 'IP_ADDRESS'}
     KeystoneInternal: {protocol: 'http', port: '5000', host: 'IP_ADDRESS'}
