--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -79,6 +79,21 @@ Heat:
             '': /v1/%(tenant_id)s
     port: 8004
 
+HeatCfn:
+    Internal:
+        vip_param: HeatApi
+        uri_suffixes:
+            '': /v1
+    Public:
+        vip_param: Public
+        uri_suffixes:
+            '': /v1
+    Admin:
+        vip_param: HeatApi
+        uri_suffixes:
+            '': /v1
+    port: 8000
+
 Horizon:
     Public:
         vip_param: Public
