Replace NodeConfigIdentifiers with DeployIdentifier
We added NodeConfigIdentifiers to trigger config to be re-applied on
update, but then later added DeployIdentifier which forces config to
*always* be applied on update, so we can simplify things by just
referencing the DeployIdentifier directly.

Change-Id: I79212def1936740825b714419dcb4952bc586a39

--- a/docker/compute-post.yaml
+++ b/docker/compute-post.yaml
@@ -5,8 +5,8 @@ description: >
 parameters:
   servers:
     type: json
-  NodeConfigIdentifiers:
-     type: json
+  DeployIdentifier:
+     type: string
      description: Value which changes if the node configuration may need to be re-applied
   DockerNamespace:
     type: string
@@ -65,7 +65,7 @@ resources:
       servers:  {get_param: servers}
       config: {get_resource: ComputePuppetConfig}
       input_values:
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
         tripleo::packages::enable_install: True
 
   CopyEtcConfig:
