--- a/puppet/ceph-storage-post.yaml
+++ b/puppet/ceph-storage-post.yaml
@@ -10,12 +10,12 @@ parameters:
     type: boolean
   servers:
     type: json
-  NodeConfigIdentifiers:
-    type: json
-    description: Value which changes if the node configuration may need to be re-applied
   RoleData:
     type: json
     default: {}
+  DeployIdentifier:
+     type: string
+     description: Value which changes if the node configuration may need to be re-applied
 
 resources:
 
@@ -28,7 +28,7 @@ resources:
       servers:  {get_param: servers}
       config: {get_resource: CephStorageArtifactsConfig}
       input_values:
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   CephStoragePuppetConfig:
     type: OS::Heat::SoftwareConfig
@@ -57,7 +57,7 @@ resources:
       config: {get_resource: CephStoragePuppetConfig}
       input_values:
         step: 2
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   CephStorageDeployment_Step3:
     type: OS::Heat::StructuredDeployments
@@ -68,7 +68,7 @@ resources:
       config: {get_resource: CephStoragePuppetConfig}
       input_values:
         step: 3
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   # Note, this should come last, so use depends_on to ensure
   # this is created after any other resources.
