--- a/puppet/cinder-storage-post.yaml
+++ b/puppet/cinder-storage-post.yaml
@@ -8,8 +8,8 @@ parameters:
     type: boolean
   servers:
     type: json
-  NodeConfigIdentifiers:
-     type: json
+  DeployIdentifier:
+     type: string
      description: Value which changes if the node configuration may need to be re-applied
   RoleData:
     type: json
@@ -26,7 +26,7 @@ resources:
       servers:  {get_param: servers}
       config: {get_resource: VolumeArtifactsConfig}
       input_values:
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   VolumePuppetConfig:
     type: OS::Heat::SoftwareConfig
@@ -56,7 +56,7 @@ resources:
       config: {get_resource: VolumePuppetConfig}
       input_values:
         step: 2
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   VolumeDeployment_Step3:
     type: OS::Heat::StructuredDeployments
@@ -67,7 +67,7 @@ resources:
       config: {get_resource: VolumePuppetConfig}
       input_values:
         step: 3
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   VolumeDeployment_Step4:
     type: OS::Heat::StructuredDeployments
@@ -78,7 +78,7 @@ resources:
       config: {get_resource: VolumePuppetConfig}
       input_values:
         step: 4
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   # Note, this should come last, so use depends_on to ensure
   # this is created after any other resources.
