--- a/puppet/controller-post.yaml
+++ b/puppet/controller-post.yaml
@@ -10,12 +10,12 @@ parameters:
     type: boolean
   servers:
     type: json
-  NodeConfigIdentifiers:
-    type: json
-    description: Value which changes if the node configuration may need to be re-applied
   RoleData:
     type: json
     default: {}
+  DeployIdentifier:
+     type: string
+     description: Value which changes if the node configuration may need to be re-applied
 
 resources:
 
@@ -33,7 +33,7 @@ resources:
     properties:
       servers:  {get_param: servers}
       input_values:
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   ControllerPuppetConfig:
     type: OS::TripleO::ControllerConfig
@@ -53,7 +53,7 @@ resources:
       config: {get_resource: ControllerPuppetConfig}
       input_values:
         step: 1
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   ControllerServicesBaseDeployment_Step2:
     type: OS::Heat::StructuredDeployments
@@ -64,7 +64,7 @@ resources:
       config: {get_resource: ControllerPuppetConfig}
       input_values:
         step: 2
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   ControllerOvercloudServicesDeployment_Step3:
     type: OS::Heat::StructuredDeployments
@@ -75,7 +75,7 @@ resources:
       config: {get_resource: ControllerPuppetConfig}
       input_values:
         step: 3
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   ControllerOvercloudServicesDeployment_Step4:
     type: OS::Heat::StructuredDeployments
@@ -86,7 +86,7 @@ resources:
       config: {get_resource: ControllerPuppetConfig}
       input_values:
         step: 4
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   ControllerOvercloudServicesDeployment_Step5:
     type: OS::Heat::StructuredDeployments
@@ -97,7 +97,7 @@ resources:
       config: {get_resource: ControllerPuppetConfig}
       input_values:
         step: 5
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   ControllerPostPuppet:
     type: OS::TripleO::Tasks::ControllerPostPuppet
@@ -105,7 +105,7 @@ resources:
     properties:
       servers:  {get_param: servers}
       input_values:
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   # Note, this should come last, so use depends_on to ensure
   # this is created after any other resources.
