--- a/puppet/swift-storage-post.yaml
+++ b/puppet/swift-storage-post.yaml
@@ -8,12 +8,12 @@ parameters:
     type: boolean
   servers:
     type: json
-  NodeConfigIdentifiers:
-    type: json
-    description: Value which changes if the node configuration may need to be re-applied
   RoleData:
     type: json
     default: {}
+  DeployIdentifier:
+     type: string
+     description: Value which changes if the node configuration may need to be re-applied
 
 resources:
 
@@ -26,7 +26,7 @@ resources:
       servers:  {get_param: servers}
       config: {get_resource: StorageArtifactsConfig}
       input_values:
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   StoragePuppetConfig:
     type: OS::Heat::SoftwareConfig
@@ -56,7 +56,7 @@ resources:
       config: {get_resource: StoragePuppetConfig}
       input_values:
         step: 2
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   StorageRingbuilderDeployment_Step3:
     type: OS::Heat::StructuredDeployments
@@ -67,7 +67,7 @@ resources:
       config: {get_resource: StoragePuppetConfig}
       input_values:
         step: 3
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   StorageDeployment_Step4:
     type: OS::Heat::StructuredDeployments
@@ -78,7 +78,7 @@ resources:
       config: {get_resource: StoragePuppetConfig}
       input_values:
         step: 4
-        update_identifier: {get_param: NodeConfigIdentifiers}
+        update_identifier: {get_param: DeployIdentifier}
 
   # Note, this should come last, so use depends_on to ensure
   # this is created after any other resources.
