--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -192,3 +192,18 @@ Sahara:
         uri_suffixes:
             '': /v1.1/%(tenant_id)s
     port: 8386
+
+Ironic:
+    Internal:
+        vip_param: IronicApi
+        uri_suffixes:
+            '': /v1
+    Public:
+        vip_param: Public
+        uri_suffixes:
+            '': /v1
+    Admin:
+        vip_param: IronicApi
+        uri_suffixes:
+            '': /v1
+    port: 6385
