--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -56,6 +56,8 @@ parameters:
     type: comma_delimited_list
   sahara_api_node_ips:
     type: comma_delimited_list
+  ironic_api_node_ips:
+    type: comma_delimited_list
 
   DeployIdentifier:
     type: string
@@ -294,6 +296,14 @@ resources:
                         list_join:
                         - "','"
                         - {get_param: sahara_api_node_ips}
+                ironic_api_node_ips:
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: ironic_api_node_ips}
 
                 # NOTE(gfidente): interpolation with %{} in the
                 # hieradata file can't be used as it returns string
@@ -306,6 +316,7 @@ resources:
                 nova::rabbit_hosts: *rabbit_nodes_array
                 keystone::rabbit_hosts: *rabbit_nodes_array
                 sahara::rabbit_hosts: *rabbit_nodes_array
+                ironic::rabbit_hosts: *rabbit_nodes_array
 
                 deploy_identifier: {get_param: DeployIdentifier}
                 update_identifier: {get_param: UpdateIdentifier}
