Move dhcp agent maps to OS::Heat::None to resource_registry
Change Id Ia61295943e67efe354a51a26fe4540f288ff6ede added support for
composable Neutron dhcp agent services. However in the sample
environments for OpenContrail and Plumgrid where dhcp agent is disabled,
the mapping for OS::Heat::None was under parameter_defaults instead of
resource_registry.

Change-Id: I0aedbbc3720783d4208d524cd28c7eed4fc5d1d7

--- a/environments/neutron-plumgrid.yaml
+++ b/environments/neutron-plumgrid.yaml
@@ -2,6 +2,8 @@
 # extensions, configured via puppet
 resource_registry:
   OS::TripleO::ControllerExtraConfigPre: ../puppet/extraconfig/pre_deploy/controller/neutron-plumgrid.yaml
+  # PLUMgrid doesn't require dhcp
+  OS::TripleO::Services::NeutronDhcpAgent: OS::Heat::None
 
 parameter_defaults:
   NeutronCorePlugin: networking_plumgrid.neutron.plugins.plugin.NeutronPluginPLUMgridV2
@@ -22,8 +24,7 @@ parameter_defaults:
   #PLUMgridNeutronPluginVersion: present
   #PLUMgridPlumlibVersion: present
 
-  # PLUMgrid doesn't require dhcp, l3, ovs and metadata agents
-  OS::TripleO::Services::NeutronDhcpAgent: OS::Heat::None
+  # PLUMgrid doesn't require l3, ovs and metadata agents
   NeutronEnableL3Agent: false
   NeutronEnableMetadataAgent: false
   NeutronEnableOVSAgent: false
