--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -61,8 +61,10 @@ GlanceRegistry:
     port: 9191
 
 Mysql:
-    '':
+    Internal:
         vip_param: Mysql
+    protocol: mysql+pymysql
+    port: 3306
 
 Heat:
     Internal:
