--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -864,10 +864,10 @@ resources:
 
   ControllerServiceChain:
     type: OS::TripleO::Services
+    depends_on: Networks
     properties:
       Services: {get_param: ControllerServices}
       EndpointMap: {get_attr: [EndpointMap, endpoint_map]}
-      MysqlVirtualIPUri: {get_attr: [VipMap, net_ip_uri_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
 
   Controller:
     type: OS::Heat::ResourceGroup
@@ -984,7 +984,6 @@ resources:
           NovaApiVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, NovaApiNetwork]}]}
           SwiftProxyVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, SwiftProxyNetwork]}]}
           MysqlVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
-          MysqlVirtualIPUri: {get_attr: [VipMap, net_ip_uri_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
           NeutronApiVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, NeutronApiNetwork]}]}
           NovaApiVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, NovaApiNetwork]}]}
           SaharaApiVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, SaharaApiNetwork]}]}
@@ -1004,7 +1003,6 @@ resources:
     properties:
       Services: {get_param: ComputeServices}
       EndpointMap: {get_attr: [EndpointMap, endpoint_map]}
-      MysqlVirtualIPUri: {get_attr: [VipMap, net_ip_uri_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
 
   Compute:
     type: OS::Heat::ResourceGroup
@@ -1123,7 +1121,6 @@ resources:
                 '%stackname%': {get_param: 'OS::stack_name'}
           ServiceNetMap: {get_param: ServiceNetMap}
           EndpointMap: {get_attr: [EndpointMap, endpoint_map]}
-          MysqlVirtualIPUri: {get_attr: [VipMap, net_ip_uri_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
           ExtraConfig: {get_param: ExtraConfig}
           BlockStorageExtraConfig: {get_param: BlockStorageExtraConfig}
           CloudDomain: {get_param: CloudDomain}
@@ -1169,7 +1166,6 @@ resources:
     properties:
       Services: {get_param: CephStorageServices}
       EndpointMap: {get_attr: [EndpointMap, endpoint_map]}
-      MysqlVirtualIPUri: {get_attr: [VipMap, net_ip_uri_map, {get_param: [ServiceNetMap, MysqlNetwork]}]}
 
   CephStorage:
     type: OS::Heat::ResourceGroup
