--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -112,9 +112,6 @@ parameters:
   GlanceApiVirtualIP:
     type: string
     default: ''
-  MysqlVirtualIPUri:
-    type: string
-    default: ''
   NetworkDeploymentActions:
     type: comma_delimited_list
     description: >
@@ -281,7 +278,15 @@ resources:
       config: {get_resource: BlockStorageConfig}
       input_values:
         debug: {get_param: Debug}
-        cinder_dsn: {list_join: ['', ['mysql+pymysql://cinder:', {get_param: CinderPassword}, '@', {get_param: MysqlVirtualIPUri} , '/cinder']]}
+        cinder_dsn:
+          list_join:
+            - ''
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://cinder:'
+              - {get_param: CinderPassword}
+              - '@'
+              - {get_param: [EndpointMap, MysqlInternal, host]}
+              - '/cinder'
         snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
         snmpd_readonly_user_password: {get_param: SnmpdReadonlyUserPassword}
         cinder_lvm_loop_device_size:
