--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -596,9 +596,6 @@ parameters:
   MysqlVirtualIP:
     type: string
     default: ''
-  MysqlVirtualIPUri:
-    type: string
-    default: ''
   NeutronApiVirtualIP:
     type: string
     default: ''
@@ -856,10 +853,11 @@ resources:
         cinder_dsn:
           list_join:
             - ''
-            - - 'mysql+pymysql://cinder:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://cinder:'
               - {get_param: CinderPassword}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/cinder'
         cinder_public_url: {get_param: [EndpointMap, CinderPublic, uri]}
         cinder_internal_url: {get_param: [EndpointMap, CinderInternal, uri]}
@@ -962,10 +960,11 @@ resources:
         neutron_dsn:
           list_join:
             - ''
-            - - 'mysql+pymysql://neutron:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://neutron:'
               - {get_param: NeutronPassword}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/ovs_neutron?charset=utf8'
         neutron_internal_url: { get_param: [ EndpointMap, NeutronInternal, uri ] }
         neutron_public_url: { get_param: [ EndpointMap, NeutronPublic, uri ] }
@@ -995,18 +994,20 @@ resources:
         ceilometer_dsn:
           list_join:
             - ''
-            - - 'mysql+pymysql://ceilometer:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://ceilometer:'
               - {get_param: CeilometerPassword}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/ceilometer'
         gnocchi_dsn:
           list_join:
             - ''
-            - - 'mysql+pymysql://gnocchi:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://gnocchi:'
               - {get_param: GnocchiPassword}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/gnocchi'
         gnocchi_internal_url: {get_param: [EndpointMap, GnocchiInternal, uri]}
         gnocchi_public_url: { get_param: [ EndpointMap, GnocchiPublic, uri ] }
@@ -1024,18 +1025,20 @@ resources:
         nova_dsn:
           list_join:
             - ''
-            - - 'mysql+pymysql://nova:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://nova:'
               - {get_param: NovaPassword}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/nova'
         nova_api_dsn:
           list_join:
             - ''
-            - - 'mysql+pymysql://nova_api:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://nova_api:'
               - {get_param: NovaPassword}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/nova_api'
         upgrade_level_nova_compute: {get_param: UpgradeLevelNovaCompute}
         instance_name_template: {get_param: InstanceNameTemplate}
@@ -1077,10 +1080,11 @@ resources:
         sahara_dsn:
           list_join:
             - ''
-            - - 'mysql://sahara:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://sahara:'
               - {get_param: SaharaPassword}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/sahara'
         swift_proxy_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, SwiftProxyNetwork]}]}
         swift_management_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, SwiftMgmtNetwork]}]}
