--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -9,9 +9,6 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
-  MysqlVirtualIPUri:
-    type: string
-    default: ''
   Debug:
     default: ''
     description: Set to True to enable debugging on all services.
@@ -63,13 +60,14 @@ outputs:
     description: Role data for the Glance API role.
     value:
       config_settings:
-        glance_dsn: &glance_dsn
+        glance::api::database_connection:
           list_join:
             - ''
-            - - 'mysql+pymysql://glance:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://glance:'
               - {get_param: GlancePassword}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/glance'
         glance::api::bind_port: {get_param: [EndpointMap, GlanceInternal, port]}
         glance::api::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
@@ -84,7 +82,6 @@ outputs:
         glance::api::workers: {get_param: GlanceWorkers}
         glance_notifier_strategy: {get_param: GlanceNotifierStrategy}
         glance_log_file: {get_param: GlanceLogFile}
-        glance::api::database_connection: *glance_dsn
         glance::backend::swift::swift_store_auth_address: {get_param: [EndpointMap, KeystoneInternal, uri] }
         glance::backend::swift::swift_store_user: service:glance
         glance::backend::swift::swift_store_key: {get_param: GlancePassword}
