--- a/puppet/services/glance-registry.yaml
+++ b/puppet/services/glance-registry.yaml
@@ -9,9 +9,6 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
-  MysqlVirtualIPUri:
-    type: string
-    default: ''
   Debug:
     default: ''
     description: Set to True to enable debugging on all services.
@@ -30,16 +27,16 @@ outputs:
     description: Role data for the Glance Registry role.
     value:
       config_settings:
-        glance_dsn: &glance_dsn
+        glance::registry::database_connection:
           list_join:
             - ''
-            - - 'mysql+pymysql://glance:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://glance:'
               - {get_param: GlancePassword}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/glance'
         glance::registry::keystone_password: {get_param: GlancePassword}
-        glance::registry::database_connection: *glance_dsn
         glance::registry::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
         glance::registry::identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
         glance::registry::debug: {get_param: Debug}
