--- a/puppet/services/heat-engine.yaml
+++ b/puppet/services/heat-engine.yaml
@@ -9,9 +9,6 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
-  MysqlVirtualIPUri:
-    type: string
-    default: ''
   HeatEnableDBPurge:
     type: boolean
     default: true
@@ -43,19 +40,19 @@ outputs:
           - get_attr: [HeatBase, role_data, config_settings]
           - heat::engine::num_engine_workers: {get_param: HeatWorkers}
             tripleo::profile::base::heat::manage_db_purge: {get_param: HeatEnableDBPurge}
-            heat_dsn: &heat_dsn
+            heat::database_connection:
               list_join:
                 - ''
-                - - 'mysql+pymysql://heat:'
+                - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+                  - '://heat:'
                   - {get_param: HeatPassword}
                   - '@'
-                  - {get_param: MysqlVirtualIPUri}
+                  - {get_param: [EndpointMap, MysqlInternal, host]}
                   - '/heat'
             heat::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
             heat::keystone_ec2_uri: {get_param: [EndpointMap, KeystoneEC2, uri]}
             heat::identity_uri: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
             heat::keystone_password: {get_param: HeatPassword}
-            heat::database_connection: *heat_dsn
             heat::db::mysql::password: {get_param: HeatPassword}
             heat::keystone::domain::domain_password: {get_param: HeatStackDomainAdminPassword}
       step_config: |
