--- a/puppet/services/keystone.yaml
+++ b/puppet/services/keystone.yaml
@@ -54,9 +54,6 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
-  MysqlVirtualIPUri:
-    type: string
-    default: ''
   Debug:
     type: string
     default: ''
@@ -97,15 +94,15 @@ outputs:
     description: Role data for the Keystone role.
     value:
       config_settings:
-        keystone_dsn: &keystone_dsn
+        keystone::database_connection:
           list_join:
             - ''
-            - - 'mysql+pymysql://keystone:'
+            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
+              - '://keystone:'
               - {get_param: AdminToken}
               - '@'
-              - {get_param: MysqlVirtualIPUri}
+              - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/keystone'
-        keystone::database_connection: *keystone_dsn
         keystone::admin_token: {get_param: AdminToken}
         keystone::roles::admin::password: {get_param: AdminPassword}
         keystone_ca_certificate: {get_param: KeystoneCACertificate}
