Gnocchi composable roles
Implements: blueprint composable-services-within-roles

Co-Authored-By: Juan Antonio Osorio Robles <jaosorior@redhat.com>
Co-Authored-By: Carlos Camacho <ccamacho@redhat.com>

Depends-On: Id728aae79442c45ab48fe0914c065f1807e8890d

Closes-Bug: #1601846
Change-Id: I40a3815923099d00a0f3fc1d88a942784e7c6fb9

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -179,6 +179,10 @@ resource_registry:
   OS::TripleO::Services::CeilometerAgentCentral: puppet/services/ceilometer-agent-central.yaml
   OS::TripleO::Services::CeilometerAgentNotification: puppet/services/ceilometer-agent-notification.yaml
   OS::TripleO::Services::Horizon: puppet/services/horizon.yaml
+  #Gnocchi services
+  OS::TripleO::Services::GnocchiApi: puppet/services/gnocchi-api.yaml
+  OS::TripleO::Services::GnocchiMetricd: puppet/services/gnocchi-metricd.yaml
+  OS::TripleO::Services::GnocchiStatsd: puppet/services/gnocchi-statsd.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
