--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -296,19 +296,6 @@ parameters:
           ]
         }
     type: json
-  GnocchiBackend:
-    default: file
-    description: The short name of the Gnocchi backend to use. Should be one
-      of swift, rbd or file
-    type: string
-    constraints:
-    - allowed_values: ['swift', 'file', 'rbd']
-  GnocchiIndexerBackend:
-    default: 'mysql'
-    description: The short name of the Gnocchi indexer backend to use.
-    type: string
-  GnocchiPassword:
-    description: The password for the gnocchi service account.
     type: string
     hidden: true
   InstanceNameTemplate:
@@ -509,6 +496,9 @@ parameters:
       - OS::TripleO::Services::CeilometerAgentCentral
       - OS::TripleO::Services::CeilometerAgentNotification
       - OS::TripleO::Services::Horizon
+      - OS::TripleO::Services::GnocchiApi
+      - OS::TripleO::Services::GnocchiMetricd
+      - OS::TripleO::Services::GnocchiStatsd
 
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
@@ -782,9 +772,6 @@ resources:
           ExtraConfig: {get_param: ExtraConfig}
           FencingConfig: {get_param: FencingConfig}
           Flavor: {get_param: OvercloudControlFlavor}
-          GnocchiPassword: {get_param: GnocchiPassword}
-          GnocchiBackend: {get_param: GnocchiBackend}
-          GnocchiIndexerBackend: {get_param: GnocchiIndexerBackend}
           HAProxySyslogAddress: {get_param: HAProxySyslogAddress}
           HeatAuthEncryptionKey: {get_resource: HeatAuthEncryptionKey}
           HorizonSecret: {get_resource: HorizonSecret}
