Composable Sahara services
Adds new puppet and puppet pacemaker specific services for Sahara API
and Sahara Engine.

The Pacemaker templates extend the default Sahara services and swap
in the pacemaker specific puppet-tripleo profile instead.

Change-Id: I1adda514e9592d149a3d45743a9a00b59c28ca38
Depends-On: I0c8bd68f9a98626e9d67ef713c72c9dd05b7cc12
Implements: blueprint composable-services-within-roles

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -136,6 +136,8 @@ resource_registry:
   OS::TripleO::Services::Loadbalancer: puppet/services/loadbalancer.yaml
   OS::TripleO::Services::Memcached: puppet/services/memcached.yaml
   OS::TripleO::Services::SwiftProxy: puppet/services/swift-proxy.yaml
+  OS::TripleO::Services::SaharaApi: puppet/services/sahara-api.yaml
+  OS::TripleO::Services::SaharaEngine: puppet/services/sahara-engine.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
